--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,2 +1,6 @@
-cmake_minimum_required(VERSION 3.6)
-project(donation_helper_system)
+cmake_minimum_required(VERSION 3.12)
+project(blood_donation_system C)
+
+set(CMAKE_C_STANDARD 99)
+
+add_executable(blood_donation_system main.c src/structs/donor.h src/createdonor.c src/createdonor.h src/initializer.c src/initializer.h src/menu.c src/menu.h src/lib/datevalidator.c src/lib/datevalidator.h src/lib/filereader.c src/lib/filereader.h src/lib/filehelper.c src/lib/filehelper.h)
